[package]
name = "heterogeneous_graphlets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dev-dependencies]
csv = "1.2"
indicatif = "0.17"
rayon = "1.5"

[dev-features]
default = ["return_position_impl_trait_in_trait"]

[profile.test]
overflow-checks = true   # Disable integer overflow checks.
debug = false            # Include debug info.
debug-assertions = true  # Enables debug assertions.
opt-level = 3

[profile.release]
overflow-checks = false   # Disable integer overflow checks.
debug = false            # Include debug info.
debug-assertions = false  # Enables debug assertions.
opt-level = 3
lto = "fat"
