[package]
name = "heterogeneous_graphlets"
version = "0.1.0"
edition = "2021"
authors = ["Luca Cappelletti <cappelletti.luca94@gmail.com>"]
description = "A Rust library for the computation of heterogeneous graphlets."
homepage = "https://github.com/LucaCappelletti94/heterogeneous_graphlets"
repository = "https://github.com/LucaCappelletti94/heterogeneous_graphlets"
readme = "README.md"
license = "MIT"
keywords = ["heterogeneous", "graphlets", "graph", "algorithm",]
categories = [
    "no-std",
    "algorithms",
    "science"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dev-dependencies]
csv = "1.2"
indicatif = "0.17"
rayon = "1.5"

[dev-features]
default = ["return_position_impl_trait_in_trait"]

[profile.test]
overflow-checks = true   # Disable integer overflow checks.
debug = false            # Include debug info.
debug-assertions = true  # Enables debug assertions.
opt-level = 3

[profile.release]
overflow-checks = false   # Disable integer overflow checks.
debug = false            # Include debug info.
debug-assertions = false  # Enables debug assertions.
opt-level = 3
lto = "fat"
