[package]
name = "heterogeneous_graphlets"
version = "0.1.1"
edition = "2021"
rust-version = "1.81"
authors = ["Luca Cappelletti <cappelletti.luca94@gmail.com>"]
description = "A Rust library for the computation of heterogeneous graphlets."
homepage = "https://github.com/LucaCappelletti94/heterogeneous_graphlets"
repository = "https://github.com/LucaCappelletti94/heterogeneous_graphlets"
readme = "README.md"
license = "MIT"
keywords = ["heterogeneous", "graphlets", "graph", "algorithm",]
categories = [
    "no-std",
    "algorithms",
    "science"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2", default-features = false }
thiserror = { version = "2", default-features = false }
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher"] }

[features]
# Exposes an independent brute-force reference counter (crate::oracle) used by
# the differential proptest tests and the fuzz harness. Not part of the public
# API and not enabled by default.
oracle = []

[dev-dependencies]
csv = "1.2"
rayon = "1.5"
hashbrown = "0.15"
criterion = "0.5"
proptest = "1"

[[bench]]
name = "bench_cora"
harness = false

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"
unused_lifetimes = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
# nursery is intentionally NOT enabled: its lints are unstable and change
# between toolchains, so under the CI `-Dwarnings` gate a routine Rust update
# could fail the build on unchanged code.
all = { level = "deny", priority = -2 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "deny"
# Allowed: these conflict with deliberate design choices in this crate.
inline_always = "allow"             # hot-path functions are intentionally force-inlined
cast_possible_truncation = "allow"  # the perfect hash narrows integer widths by construction
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
module_name_repetitions = "allow"   # e.g. ExtendedGraphletType in the graphlet module
too_many_lines = "allow"            # the core counting routine is a single large function
redundant_pub_crate = "allow"       # conflicts with unreachable_pub; pub(crate) is preferred here
multiple_crate_versions = "allow"   # fires on duplicate transitive deps outside our control

[profile.test]
overflow-checks = true   # Disable integer overflow checks.
debug = false            # Include debug info.
debug-assertions = true  # Enables debug assertions.
opt-level = 3

[profile.release]
overflow-checks = false   # Disable integer overflow checks.
debug = false            # Include debug info.
debug-assertions = false  # Enables debug assertions.
opt-level = 3
lto = "fat"
